force-app/main/default/objects/DMAPP__Dealmaker_Core_Settings__c/fields/DMAPP__Chatter_Snooze_Time__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Chatter_Snooze_Time__c</fullName>
    <defaultValue>30.0</defaultValue>
    <description>Surpress update messages for Dealmaker pages for these amount of minutes</description>
    <inlineHelpText>This is the number (in minutes) controlling the regularity of chatter notifications as users update their Dealmaker Opportunities. No more than 1 chatter notification can be generated within this time duration for each type of update on an opportuni</inlineHelpText>
    <label>Chatter Snooze Time</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>