force-app/main/default/objects/DMAPP__Dealmaker_Core_Settings__c/fields/DMAPP__Create_Shadow_Opp_for_Open_Only__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Create_Shadow_Opp_for_Open_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field affects the behavior of the batch job which is run after install to create Dealmaker shadow opportunities. If this flag is checked the batch job will only create shadow opportunities for open opportunities as opposed to for open opportunities and closed opportunities</description>
    <inlineHelpText>This field affects the behavior of the batch job which is run after install to create Dealmaker shadow opportunities. If this flag is checked the batch job will only create shadow opportunities for open opportunities as opposed to for open opportuni</inlineHelpText>
    <label>Bulk enable Dealmaker for open Opps only</label>
    <type>Checkbox</type>
</CustomField>