force-app/main/default/objects/DMAPP__Dealmaker_Core_Settings__c/fields/DMAPP__Create_Shadow_Opp_Job_Query_Restriction__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Create_Shadow_Opp_Job_Query_Restriction__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <description>This field allows us to specify  query where clause which restricts which opportunities are considered by the Create Shadow Opp Bulk Job. By default the batch job creates shadow opportunities for all open opportunities , if shadow opportunity creation is enabled for opportunity owner.</description>
    <inlineHelpText>This field allows us to specify  query where clause which restricts which opportunities are considered by the Create Shadow Opp Bulk Job. By default the batch job creates shadow opportunities for all open opportunities , if shadow opportunity creati</inlineHelpText>
    <label>Bulk enable - advanced query settings</label>
    <type>TextArea</type>
</CustomField>