force-app/main/default/objects/DMAPP__Dealmaker_Core_Settings__c/fields/DMAPP__Disable_Click_to_Email_on_Contact_Detail__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Disable_Click_to_Email_on_Contact_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting allows an admin to disable the ability to click to email from the Mobile Relationship Map and Mobile Smart Call Planner contact detail pages</description>
    <inlineHelpText>This setting allows an admin to disable the ability to click to email from the Mobile Relationship Map and Mobile Smart Call Planner contact detail pages</inlineHelpText>
    <label>Disable Click to Email on Contact Detail</label>
    <type>Checkbox</type>
</CustomField>