force-app/main/default/objects/DMAPP__Dealmaker_Core_Settings__c/fields/DMAPP__Temp3__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Temp3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary custom config setting that may be used in a patch scenario.</description>
    <inlineHelpText>Temporary custom config setting that may be used in a patch scenario.</inlineHelpText>
    <label>Temp3</label>
    <type>Checkbox</type>
</CustomField>